--- a/ch06_2/views/sr.handlebars
+++ b/ch06_2/views/sr.handlebars
@@ -1,1 +1,2 @@
 <h1>Tôi rất xin lỗi hãy nói về vấn đề của bạn với chúng tôi qua <strong>email:nguyennhominhquang@gmail.com</strong></h1>
+<a href="/feedback">back home</a>
